--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body {
   position: relative;
   height: 100%;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 ul {
@@ -53,6 +56,7 @@ header nav ul li a.active {
 main {
   display: flex;
   flex-wrap: wrap;
+  flex: 1;
 }
 main section.left {
   flex: 3 1 50%;
@@ -69,17 +73,6 @@ main section.left p {
 main section.right {
   flex: 1 1 50%;
   position: relative;
-}
-main section.right img {
-  border-radius: 50%;
-  width: 20vw;
-  height: 20vw;
-  position: absolute;
-  top: 50%;
-  right: 25vw;
-  transform: translateY(-50%);
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 main section.table {
   flex: 3 1 500px;
@@ -184,6 +177,27 @@ main section.contact div.content h2 {
   margin: 1rem 0rem;
 }
 
+.myPic {
+  position: fixed;
+  z-index: 0;
+  border-radius: 50%;
+  width: 20vw;
+  height: 20vw;
+  top: 50%;
+  right: 25vw;
+  transform: translateY(-50%);
+  -o-object-fit: cover;
+     object-fit: cover;
+  pointer-events: none;
+}
+
+footer {
+  padding: 1rem;
+}
+footer ul {
+  display: flex;
+  flex-wrap: wrap;
+}
 footer a {
   padding: 1rem;
 }
