--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,17 @@ img.orange {
 }
 
 header {
+  display: flex;
   padding: 2rem;
+}
+
+.JHlogo {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+.JHlogo img {
+  width: 120px;
 }
 
 nav {
@@ -62,6 +72,7 @@ nav ul li a.active {
   padding: 0;
   margin: 10px;
   border: none;
+  color: #000;
 }
 
 main {
@@ -208,6 +219,7 @@ footer {
 footer ul {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 footer a {
   padding: 1rem;
@@ -288,7 +300,7 @@ footer a:hover img {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10vh;
+    margin-bottom: 15vh;
   }
   footer li {
     text-align: center;
