--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,16 @@ img.orange {
     height: 2400px;
 }
 header {
+    display: flex;
     padding: 2rem;
+}
+.JHlogo {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    img {
+        width: 120px;
+    }
 }
 nav {
     width: 100%;
@@ -58,6 +67,7 @@ nav {
     padding: 0;
     margin: 10px;
     border: none;
+    color: #000;
 }
 main {
     display: flex;
@@ -210,6 +220,7 @@ footer {
     ul {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
     }
     a {
         padding: 1rem;
@@ -297,7 +308,7 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-bottom: 10vh;
+        margin-bottom: 15vh;
         li {
             text-align: center;
         }
