--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,7 @@
 }
 html {
     height: 100%;
-    overflow: hidden;
+    // overflow: hidden;
 }
 body {
     position: relative;
@@ -29,18 +29,41 @@ img.orange {
 }
 header {
     display: flex;
-    padding: 2rem;
+    justify-content: space-between;
+    padding: 0.8rem 2rem;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #fff;
+    transition: all 0.5s ease-in-out;
+    &.active {
+        padding: 0.3rem 2rem;
+        box-shadow: -6px -6px 16px #444;
+        opacity: 0.9;
+        transition: all 0.5s ease-in-out;
+        .JHlogo {
+            img {
+                width: 60px;
+                transition: all 0.5s ease-in-out;
+            }
+        }
+    }
 }
 .JHlogo {
     display: flex;
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     img {
-        width: 120px;
+        width: 100px;
+        transition: all 0.5s ease-in-out;
     }
 }
 nav {
-    width: 100%;
+    display: flex;
+    // width: 100%;
+    align-items: center;
     ul {
         width: 60%;
         display: flex;
@@ -49,6 +72,8 @@ nav {
         gap: 5rem;
         li {
             a {
+                display: block;
+                width: max-content;
                 font-size: 1.5rem;
                 color: black;
                 text-decoration: none;
@@ -73,9 +98,12 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex: 1;
-    section.left {
+    margin-top: 150px;
+}
+section {
+    padding: 2rem;
+    &.left {
         flex: 3 1 50%;
-        padding: 2rem;
         h1 {
             font-size: 4rem;
             color: #e08958;
@@ -85,12 +113,12 @@ main {
             padding: 1rem 0;
         }
     }
-    section.right {
+    &.right {
         // display: flex;
         flex: 1 1 50%;
         position: relative;
     }
-    section.table {
+    &.table {
         flex: 3 1 500px;
         padding: 3rem;
         table {
@@ -124,85 +152,88 @@ main {
             }
         }
     }
+}
 
-    td.icon {
-        img {
-            width: 48px;
-            height: 48px;
-        }
-    }
 
-    section.picture {
-        flex: 1 1 600px;
-        position: relative;
-        img {
-            height: 100%;
-        }
-        div.orangeRect {
-            width: 30vw;
-            height: 50vw;
-            background-color: #e08958;
-            position: absolute;
-            top: 70px;
-            left: 60px;
-            z-index: -1;
-        }
+
+td.icon {
+    img {
+        width: 48px;
+        height: 48px;
     }
-    section.form {
-        flex: 1 1 600px;
-        form {
-            min-height: 70vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            padding: 0.5rem;
-            div {
-                margin: 0.5rem;
-                label {
-                    font-size: 1.5rem;
-                }
-                input,
-                textarea {
-                    background-color: #f9ac7f;
-                    color: #fff;
-                    font-size: 1.25rem;
-                    padding: 0.5rem 0.25rem;
-                    border: none;
-                    width: 80%;
-                    resize: none;
-                }
-                textarea {
-                    vertical-align: top;
-                }
-            }
-            button {
-                align-self: center;
+}
+
+section.picture {
+    flex: 1 1 600px;
+    position: relative;
+    img {
+        height: 100%;
+    }
+    div.orangeRect {
+        width: 30vw;
+        height: 50vw;
+        background-color: #e08958;
+        position: absolute;
+        top: 70px;
+        left: 60px;
+        z-index: -1;
+    }
+}
+section.form {
+    flex: 1 1 600px;
+    form {
+        min-height: 70vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding: 0.5rem;
+        div {
+            margin: 0.5rem;
+            label {
                 font-size: 1.5rem;
-                border-radius: 0.75rem;
-                padding: 0.75rem 1.5rem;
-                border: none;
+            }
+            input,
+            textarea {
                 background-color: #f9ac7f;
                 color: #fff;
-                cursor: pointer;
+                font-size: 1.25rem;
+                padding: 0.5rem 0.25rem;
+                border: none;
+                width: 80%;
+                resize: none;
+            }
+            textarea {
+                vertical-align: top;
             }
         }
-    }
-    div.line {
-        background-color: gray;
-        width: 3px;
-    }
-    section.contact {
-        flex: 1 1 500px;
-        display: flex;
-        align-items: center;
-        padding: 2rem;
-        div.content {
-            h2 {
-                margin: 1rem 0rem;
-            }
+        button {
+            align-self: center;
+            font-size: 1.5rem;
+            border-radius: 0.75rem;
+            padding: 0.75rem 1.5rem;
+            border: none;
+            background-color: #f9ac7f;
+            color: #fff;
+            cursor: pointer;
         }
     }
 }
+div.line {
+    background-color: gray;
+    width: 3px;
+}
+section.contact {
+    flex: 1 1 500px;
+    display: flex;
+    align-items: center;
+    padding: 2rem;
+    div.content {
+        h2 {
+            margin: 1rem 0rem;
+        }
+    }
+}
+
 .myPic {
     position: fixed;
     z-index: 0;
@@ -264,43 +295,45 @@ footer {
     nav {
         ul {
             width: 100%;
-            flex-direction: column;
+            // flex-direction: column;
             li {
                 padding: 1rem 0;
-                border-bottom: 2px solid gray;
+                // border-bottom: 2px solid gray;
             }
         }
     }
     main {
-        section.left {
-            h1 {
-                color: black;
-            }
-        }
-        section.right {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 1rem;
-            img {
-                position: static;
-                transform: none;
-                width: 50vw;
-                height: 50vw;
-            }
-        }
-        section.picture {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            img {
-                height: 60vw;
-            }
-            div.orangeRect {
-                display: none;
-            }
-        }
+        flex-wrap: wrap-reverse;
         div.line {
+            display: none;
+        }
+    }
+    section.left {
+        h1 {
+            font-size: 3rem;
+            color: black;
+        }
+    }
+    section.right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 1rem;
+        img {
+            position: static;
+            transform: none;
+            width: 50vw;
+            height: 50vw;
+        }
+    }
+    section.picture {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            height: 60vw;
+        }
+        div.orangeRect {
             display: none;
         }
     }
@@ -322,7 +355,14 @@ footer {
 }
 
 @media screen and (max-width: 720px) {
+    img {
+        &.orange {
+            width: 100vw;
+            height: 200vh;
+        }
+    }
     nav {
+        justify-content: right;
         ul {
             // display: flex; // 預設隱藏
             opacity: 0;
@@ -338,6 +378,13 @@ footer {
             z-index: 999;
             transform: translateX(250px);
             transition: all 0.5s ease-in-out;
+            gap: 0.5rem;
+            li {
+                justify-items: right;
+                a {
+                    color: #f9ac7f;
+                }
+            }
         }
 
         ul.show {
@@ -349,5 +396,21 @@ footer {
     }
     .menu-toggle {
         display: block;
+        padding: 1rem;
+    }
+    .menu-close {
+        display: block;
+        color: rgb(255, 239, 221);
+    }
+    section {
+        &.right {
+            img {
+                width: 70vw;
+                height: 70vw;
+            }
+        }
+        &.table {
+            padding: 1rem;
+        }
     }
 }
