--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -12,6 +12,145 @@
   visibility: hidden;
 }
 
+.spinner {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.spinner-container {
+  animation: rotate 4s linear 1s normal none infinite running;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border-radius: 50%;
+}
+
+.dot {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 5px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  transform-origin: 20px 20px;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+.dot-0 {
+  transform: rotate(0deg);
+  animation-name: rotate-0;
+  animation-delay: 900ms;
+}
+
+@keyframes rotate-0 {
+  0%, 20% {
+    transform: rotate(0deg);
+  }
+  40%, 60% {
+    transform: rotate(180deg);
+  }
+  80%, 100% {
+    transform: rotate(360deg);
+  }
+}
+.dot-1 {
+  transform: rotate(20deg);
+  animation-name: rotate-1;
+  animation-delay: 775ms;
+}
+
+@keyframes rotate-1 {
+  0%, 20% {
+    transform: rotate(20deg);
+  }
+  40%, 60% {
+    transform: rotate(200deg);
+  }
+  80%, 100% {
+    transform: rotate(380deg);
+  }
+}
+.dot-2 {
+  transform: rotate(40deg);
+  animation-name: rotate-2;
+  animation-delay: 650ms;
+}
+
+@keyframes rotate-2 {
+  0%, 20% {
+    transform: rotate(40deg);
+  }
+  40%, 60% {
+    transform: rotate(220deg);
+  }
+  80%, 100% {
+    transform: rotate(400deg);
+  }
+}
+.dot-3 {
+  transform: rotate(60deg);
+  animation-name: rotate-3;
+  animation-delay: 525ms;
+}
+
+@keyframes rotate-3 {
+  0%, 20% {
+    transform: rotate(60deg);
+  }
+  40%, 60% {
+    transform: rotate(240deg);
+  }
+  80%, 100% {
+    transform: rotate(420deg);
+  }
+}
+.dot-4 {
+  transform: rotate(80deg);
+  animation-name: rotate-4;
+  animation-delay: 400ms;
+}
+
+@keyframes rotate-4 {
+  0%, 20% {
+    transform: rotate(80deg);
+  }
+  40%, 60% {
+    transform: rotate(260deg);
+  }
+  80%, 100% {
+    transform: rotate(440deg);
+  }
+}
+.dot-5 {
+  transform: rotate(100deg);
+  animation-name: rotate-5;
+  animation-delay: 275ms;
+}
+
+@keyframes rotate-5 {
+  0%, 20% {
+    transform: rotate(100deg);
+  }
+  40%, 60% {
+    transform: rotate(280deg);
+  }
+  80%, 100% {
+    transform: rotate(460deg);
+  }
+}
 div.animation {
   width: 100%;
   height: 100vh;
