--- a/assets/scss/animation.scss
+++ b/assets/scss/animation.scss
@@ -11,6 +11,79 @@
         visibility: hidden;
     }
 }
+.spinner {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.spinner-container {
+    animation: rotate 4s linear 1s normal none infinite running;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border-radius: 50%;
+}
+
+.dot {
+    content: '';
+    display: block;
+    width: 5px;
+    height: 5px;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    transform-origin: 20px 20px;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+$dot-count: 6;
+$rotate-step: 20deg;
+$full-rotation: 360deg;
+$delay-step: 125ms;
+
+@for $i from 0 to $dot-count {
+    $rotation: $i * $rotate-step;
+    $delay-ms: (900ms - ($i * $delay-step));
+
+    .dot-#{$i} {
+        transform: rotate($rotation);
+        animation-name: rotate-#{$i};
+        animation-delay: $delay-ms;
+    }
+
+    $base-rotation: $i * $rotate-step;
+    $middle-rotation: $base-rotation + 180deg;
+    $end-rotation: $base-rotation + $full-rotation;
+
+    @keyframes rotate-#{$i} {
+        0%,
+        20% {
+            transform: rotate($base-rotation);
+        }
+        40%,
+        60% {
+            transform: rotate($middle-rotation);
+        }
+        80%,
+        100% {
+            transform: rotate($end-rotation);
+        }
+    }
+}
+
 div.animation {
     width: 100%;
     height: 100vh;
