--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -151,7 +151,7 @@
     transform: rotate(460deg);
   }
 }
-div.animation {
+.animation {
   width: 100%;
   height: 100vh;
   background-color: #e08958;
@@ -161,6 +161,9 @@ div.animation {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.animation svg {
+  animation: fill 0.5s ease-in forwards 1.6s;
 }
 
 #first {
@@ -245,10 +248,6 @@ div.animation {
   stroke-dasharray: 1108px;
   stroke-dashoffset: 1108px;
   animation: fadeInside 0.5s ease-in forwards 1.6s;
-}
-
-svg {
-  animation: fill 0.5s ease-in forwards 1.6s;
 }
 
 .skip_animation {
