--- a/assets/scss/animation.scss
+++ b/assets/scss/animation.scss
@@ -84,7 +84,7 @@ $delay-step: 125ms;
     }
 }
 
-div.animation {
+.animation {
     width: 100%;
     height: 100vh;
     background-color: #e08958;
@@ -94,6 +94,9 @@ div.animation {
     display: flex;
     justify-content: center;
     align-items: center;
+    svg {
+        animation: fill 0.5s ease-in forwards 1.6s;
+    }
 }
 #first {
     stroke-dasharray: 304px;
@@ -164,9 +167,6 @@ div.animation {
     stroke-dasharray: 1108px;
     stroke-dashoffset: 1108px;
     animation: fadeInside 0.5s ease-in forwards 1.6s;
-}
-svg {
-    animation: fill 0.5s ease-in forwards 1.6s;
 }
 .skip_animation {
     position: absolute;
