--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,7 +6,12 @@ html {
 }
 body {
     position: relative;
+    color: var(--color-primary-500, #000000);
 }
+a {
+    transition: all 0.2s ease-in-out;
+}
+
 #app {
     height: 100%;
     overflow: auto;
@@ -14,14 +19,80 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
-img.orange {
-    position: fixed;
-    // top: -9vh;
-    right: 0;
-    z-index: -1;
-    width: 55vw;
-    height: 2400px;
+
+.theme-selector-popover {
+    position: absolute;
+    top: 100%;
+    margin-top: 8px;
+    width: auto;
+    padding: 16px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
+
+.dark {
+    background-color: #363636;
+    color: var(--color-primary-500, #f1f1f1);
+    &.theme-default {
+        color: var(--color-primary-500, #f1f1f1);
+    }
+    header {
+        background-color: #363636;
+        &.active {
+            box-shadow: -6px -6px 16px rgba(0, 0, 0, 1);
+            opacity: 0.9;
+        }
+    }
+    .theme-selector-popover {
+        background-color: #434343;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    }
+}
+
+.theme-orange {
+    header {
+        border-bottom: var(--color-primary-500, #e08958) 1px;
+    }
+    a,
+    button {
+        &:hover {
+            color: var(--color-primary-500, #e08958);
+        }
+    }
+}
+.theme-blue {
+    a,
+    button {
+        &:hover {
+            color: var(--color-primary-500, #6595ff);
+        }
+    }
+}
+.theme-green {
+    a,
+    button {
+        &:hover {
+            color: var(--color-primary-500, #0dbe33);
+        }
+    }
+}
+.theme-red {
+    a,
+    button {
+        &:hover {
+            color: var(--color-primary-500, #ff5c5f);
+        }
+    }
+}
+
+.toggle-checkbox {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -69,7 +140,6 @@ nav {
                 display: block;
                 width: max-content;
                 font-size: 1.5rem;
-                color: black;
                 text-decoration: none;
             }
             a.active {
