--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,10 @@ a {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
 
+.color-theme:active {
+  transform: scale(1.3);
+}
+
 .theme-orange header {
   border-bottom: var(--color-primary-500, #e08958) 1px;
 }
