--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -57,7 +57,10 @@ a {
 }
 .theme-orange {
     header {
-        border-bottom: var(--color-primary-500, #e08958) 1px;
+        border-bottom: var(--color-primary-500, #e08958) 1px solid;
+        &.active {
+            box-shadow: -6px -6px 16px #e08958;
+        }
     }
     a,
     button {
@@ -65,29 +68,59 @@ a {
             color: var(--color-primary-500, #e08958);
         }
     }
+    .progress-bar {
+        background-color: var(--color-primary-500, #e08958);
+    }
 }
 .theme-blue {
+    header {
+        border-bottom: var(--color-primary-500, #6595ff) 1px solid;
+        &.active {
+            box-shadow: -6px -6px 16px #6595ff;
+        }
+    }
     a,
     button {
         &:hover {
             color: var(--color-primary-500, #6595ff);
         }
     }
+    .progress-bar {
+        background-color: var(--color-primary-500, #6595ff);
+    }
 }
 .theme-green {
+    header {
+        border-bottom: var(--color-primary-500, #0dbe33) 1px solid;
+        &.active {
+            box-shadow: -6px -6px 16px #0dbe33;
+        }
+    }
     a,
     button {
         &:hover {
             color: var(--color-primary-500, #0dbe33);
         }
     }
+    .progress-bar {
+        background-color: var(--color-primary-500, #0dbe33);
+    }
 }
 .theme-red {
+    header {
+        border-bottom: var(--color-primary-500, #ff5c5f) 1px solid;
+        &.active {
+            box-shadow: -6px -6px 16px #ff5c5f;
+        }
+    }
     a,
     button {
         &:hover {
             color: var(--color-primary-500, #ff5c5f);
         }
+    }
+    .progress-bar {
+        background-color: var(--color-primary-500, #ff5c5f);
     }
 }
 
@@ -114,21 +147,14 @@ header {
         opacity: 0.9;
         transition: all 0.5s ease-in-out;
         .JHlogo {
-            img {
-                width: 60px;
-                transition: all 0.5s ease-in-out;
-            }
+            transform: scale(75%);
+            transition: all 0.2s ease-in-out;
         }
     }
 }
 .JHlogo {
     display: flex;
-    // width: 100%;
-    // height: 100%;
-    img {
-        width: 100px;
-        transition: all 0.5s ease-in-out;
-    }
+    transition: all 0.2s ease-in-out;
 }
 nav {
     display: flex;
