--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,9 @@ a {
   transform: scale(1.3);
 }
 
+.theme-orange .mask {
+  background-color: var(--color-primary-500, #e08958);
+}
 .theme-orange header {
   border-bottom: var(--color-primary-500, #e08958) 1px solid;
 }
@@ -72,6 +75,9 @@ a {
   background-color: var(--color-primary-500, #e08958);
 }
 
+.theme-blue .mask {
+  background-color: var(--color-primary-500, #6595ff);
+}
 .theme-blue header {
   border-bottom: var(--color-primary-500, #6595ff) 1px solid;
 }
@@ -86,6 +92,9 @@ a {
   background-color: var(--color-primary-500, #6595ff);
 }
 
+.theme-green .mask {
+  background-color: var(--color-primary-500, #0dbe33);
+}
 .theme-green header {
   border-bottom: var(--color-primary-500, #0dbe33) 1px solid;
 }
@@ -100,6 +109,9 @@ a {
   background-color: var(--color-primary-500, #0dbe33);
 }
 
+.theme-red .mask {
+  background-color: var(--color-primary-500, #ff5c5f);
+}
 .theme-red header {
   border-bottom: var(--color-primary-500, #ff5c5f) 1px solid;
 }
