--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ header.active {
   transition: all 0.5s ease-in-out;
 }
 header.active .JHlogo {
-  transform: scale(75%);
+  transform: scale(0.75);
   transition: all 0.2s ease-in-out;
 }
 
