--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -159,7 +159,7 @@ header {
         opacity: 0.9;
         transition: all 0.5s ease-in-out;
         .JHlogo {
-            transform: scale(75%);
+            transform: scale(0.75);
             transition: all 0.2s ease-in-out;
         }
     }
