--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -95,12 +95,11 @@ main {
     flex: 1;
 }
 section {
-    padding: 2rem;
+    // padding: 2rem;
     &.left {
         flex: 3 1 50%;
         h1 {
             font-size: 4rem;
-            color: #e08958;
         }
         p {
             font-size: 1.5rem;
@@ -114,7 +113,7 @@ section {
     }
     &.table {
         flex: 3 1 500px;
-        padding: 3rem;
+        // padding: 3rem;
         table {
             border-collapse: collapse;
             tr {
@@ -282,15 +281,15 @@ footer {
     div.orange {
         opacity: 0.5;
     }
-    // header {
-    // }
-    nav {
-        ul {
-            width: 100%;
-            // flex-direction: column;
-            li {
-                padding: 1rem 0;
-                // border-bottom: 2px solid gray;
+    header {
+        nav {
+            ul {
+                width: 100%;
+                // flex-direction: column;
+                li {
+                    padding: 1rem 0;
+                    // border-bottom: 2px solid gray;
+                }
             }
         }
     }
@@ -342,42 +341,44 @@ footer {
             height: 200vh;
         }
     }
-    nav {
-        justify-content: right;
-        opacity: 0;
-        flex-direction: column;
-        background: #444;
-        position: fixed;
-        top: 0;
-        right: 0;
-        height: 100vh;
-        width: 250px;
-        max-width: 100%;
-        z-index: 999;
-        transform: translateX(250px);
-        transition: all 0.5s ease-in-out;
-        ul {
-            display: flex;
-            padding: 1rem;
-            gap: 0.5rem;
-            li {
-                justify-items: right;
-                a {
-                    color: #f9ac7f;
+    header {
+        nav {
+            justify-content: right;
+            opacity: 0;
+            flex-direction: column;
+            background: #444;
+            position: fixed;
+            top: 0;
+            right: 0;
+            height: 100vh;
+            width: 250px;
+            max-width: 100%;
+            z-index: 999;
+            transform: translateX(250px);
+            transition: all 0.5s ease-in-out;
+            ul {
+                display: flex;
+                padding: 1rem;
+                gap: 0.5rem;
+                li {
+                    justify-items: right;
+                    a {
+                        color: #f9ac7f;
+                    }
                 }
             }
-        }
 
-        &.show {
-            display: flex;
-            opacity: 1;
-            transform: translateX(0);
-            transition: all 0.6s ease-in-out;
+            &.show {
+                display: flex;
+                opacity: 1;
+                transform: translateX(0);
+                transition: all 0.6s ease-in-out;
+            }
         }
     }
     .menu-toggle {
         display: block;
-        padding: 1rem;
+        // padding: 1rem;
     }
     .menu-close {
         display: block;
