--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ a {
 
 .theme-selector-popover {
   position: absolute;
-  top: 100%;
   margin-top: 8px;
   width: auto;
   padding: 16px;
@@ -90,7 +89,6 @@ nav ul li a.active {
   padding: 0;
   margin: 10px;
   border: none;
-  color: #000;
 }
 
 main {
@@ -280,15 +278,8 @@ footer a:hover img {
   div.orange {
     opacity: 0.5;
   }
-  header nav ul {
-    width: 100%;
-  }
-  header nav ul li {
-    padding: 1rem 0;
-  }
   section.left h1 {
     font-size: 3rem;
-    color: black;
   }
   section.right {
     display: flex;
@@ -323,7 +314,7 @@ footer a:hover img {
     width: 40px;
   }
 }
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
   img.orange {
     width: 100vw;
     height: 200vh;
@@ -332,7 +323,6 @@ footer a:hover img {
     justify-content: right;
     opacity: 0;
     flex-direction: column;
-    background: #444;
     position: fixed;
     top: 0;
     right: 0;
@@ -345,14 +335,15 @@ footer a:hover img {
   }
   header nav ul {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding: 1rem;
     gap: 0.5rem;
+    width: 100%;
   }
   header nav ul li {
+    width: 100%;
     justify-items: right;
-  }
-  header nav ul li a {
-    color: #f9ac7f;
   }
   header nav.show {
     display: flex;
@@ -365,7 +356,6 @@ footer a:hover img {
   }
   .menu-close {
     display: block;
-    color: rgb(255, 239, 221);
     margin-left: auto;
   }
   section.right img {
