--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -280,8 +280,51 @@
   }
 }
 @media screen and (max-width: 768px) {
-  .animation svg {
+  .animation div:first-child svg:nth-child(1) {
+    width: 20px;
+    height: 30px;
+  }
+  .animation div:first-child svg:nth-child(2) {
+    width: 25px;
+    height: 20px;
+  }
+  .animation div:first-child svg:nth-child(3) {
+    width: 25px;
+    height: 20px;
+  }
+  .animation div:first-child svg:nth-child(4) {
+    width: 23px;
+    height: 20px;
+  }
+  .animation div:first-child svg:nth-child(5) {
+    width: 16px;
+    height: 19px;
+  }
+  .animation div:first-child svg:nth-child(6) {
     width: 30px;
     height: 30px;
+  }
+  .animation div:first-child svg:nth-child(7) {
+    width: 16px;
+    height: 19px;
+  }
+  .animation div:first-child svg:nth-child(8) {
+    width: 20px;
+    height: 18px;
+  }
+  .animation div.second {
+    margin-top: 2px;
+  }
+  .animation div.second svg {
+    width: 30px;
+    height: 30px;
+  }
+  .animation div.second svg:nth-child(2) {
+    width: 30px;
+    height: 27px;
+  }
+  .animation div.second svg:nth-child(5) {
+    width: 30px;
+    height: 29px;
   }
 }/*# sourceMappingURL=animation.css.map */
