--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,10 +339,9 @@ footer a:hover img {
     justify-content: center;
     padding: 1rem;
     gap: 0.5rem;
-    width: 100%;
   }
   header nav ul li {
-    width: 100%;
+    text-align: right;
     justify-items: right;
   }
   header nav.show {
