--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -346,9 +346,10 @@ footer {
                 justify-content: center;
                 padding: 1rem;
                 gap: 0.5rem;
-                width: 100%;
+                // width: 100%;
                 li {
-                    width: 100%;
+                    text-align: right;
+                    // width: 100%;
                     justify-items: right;
                 }
             }
